asupersync-macros/tests/compile_fail/lab_test_missing_arg.rs
use asupersync_macros::lab_test;

#[lab_test]
fn missing_arg() {}

fn main() {}
